--- a/css/styles.css
+++ b/css/styles.css
@@ -11,13 +11,13 @@
 body{
     font-family: "Roboto",sans-serif;
     background-color: white;
-    color:#2E2F42;
+    color:#434455;
     font-size:16px;
     line-height: 24px;
     font-weight: 400;
 
 }
-.section_1{
+.section1{
     background-color: #2E2F42;
 }
 .team{
@@ -47,6 +47,15 @@ h3{
     line-height: 24px;
     font-weight: 500;
     cursor: pointer;
+    background-color: #4D5AE5;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+}
+.button:hover{
+    background-color: #404BBF;
+}
+.button:focus{
+    background-color: #404BBF;
 }
 .footer{
     background-color: #2E2F42;
@@ -73,10 +82,107 @@ p{
     text-transform: uppercase;
     line-height: 1.17;
     letter-spacing: 0.03em;
+    font-size: 18px;
 }
 span{
     color:#2E2F42;
 }
 .studio_footer{
     color:#F4F4FD
+}
+.address{
+    font-style: normal;
+}
+.contacts{
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+.title1{
+    font-size: 56px;
+    line-height: 1.07;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: #ffffff;
+
+}
+.title2{
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+
+}
+.our_team{
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+.titlu3{
+    font-size: 36px;
+    stilul line-height: 1.11;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: #2e2f42;
+}
+.our_portofolio{
+    background-color: #FFFFFF;
+
+}
+.subtitle3{
+    font-weight: 500;
+    stilul font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+}
+
+.title4{
+    stilul font-size: 36px;
+    stilul line-height: 1.11;
+    stilul text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: #2e2f42;
+}
+.subtitle4{
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+}
+.portofolio_paragraph {
+    stilul font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+.footer_paragraph{
+    line-height: 1.5;
+    color: #F4F4FD;
+    letter-spacing: 0.02em;
+}
+.menu{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+}
+.menu:hover{
+    color: #404bbf;
+}
+.menu:focus{
+    color: #404bbf;
+}
+.section2_paragraph{
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
 }
