--- a/css/styles.css
+++ b/css/styles.css
@@ -1,43 +1,69 @@
-@font-face {
-    font-family: "Raleway", sans-serif;
-    font-weight: 700;
-    src: url("https: //fonts.googleapis.com/css2?family=Raleway:ital@0;1&display=swap");
-}
-@font-face {
+body {
     font-family: "Roboto", sans-serif;
-    font-weight: 400,500,700;
-    src: url("https: //fonts.googleapis.com/css2?family=Raleway:ital@0;1&family=Roboto:wght@400;500;700&display=swap");
-}
-body{
-    font-family: "Roboto",sans-serif;
     background-color: white;
-    color:#434455;
-    font-size:16px;
+    color: #434455;
+    font-size: 16px;
     line-height: 24px;
     font-weight: 400;
 
 }
-.section_1{
-    background-color: #2E2F42;
-}
-.team{
-    background-color: #FFFFFF;
-
-h2{
-    font-size:36px;
+.logo {
+    color: #4D5AE5;
+    font-family: "Raleway", sans-serif;
     font-weight: 700;
-
+    text-transform: uppercase;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    font-size: 18px;
 }
-h3{
-    font-size:20px;
+span {
+    color: #2E2F42;
+}
+.menu {
     font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
 }
-.medium{
+
+.menu:hover {
+    color: #404bbf;
+}
+
+.menu:focus {
+    color: #404bbf;
+}
+.medium {
     font-size: =16px;
     line-height: 24px;
 }
-.button{
-    font-size:16px;
+.address {
+    font-style: normal;
+}
+.contacts {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+.link {
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 16px;
+}
+.section_1 {
+    background-color: #2E2F42;
+}
+.title_1 {
+    font-size: 56px;
+    line-height: 1.07;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: #ffffff;
+}
+.button {
+    font-size: 16px;
     line-height: 24px;
     font-weight: 500;
     cursor: pointer;
@@ -45,62 +71,26 @@ h3{
     letter-spacing: 0.04em;
     color: #ffffff;
 }
-.button:hover{
+
+.button:hover {
     background-color: #404BBF;
 }
-.button:focus{
+
+.button:focus {
     background-color: #404BBF;
 }
-.footer{
-    background-color: #2E2F42;
-    color:#F4F4FD;
+.team {
+    background-color: #FFFFFF;
 }
-p{
-    color:#434455;
-}
-.link{
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 16px;
-}
-.contacts:hover{
-    color:#404BBF;
-}
-.contacts:focus{
-    color:#404BBF;
-}
-.logo{
-    color:#4D5AE5;
-    font-family: "Raleway",sans-serif;
-    font-weight: 700;
-    text-transform: uppercase;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    font-size: 18px;
-}
-span{
-    color:#2E2F42;
-}
-.studio_footer{
-    color:#F4F4FD
-}
-.address{
-    font-style: normal;
-}
-.contacts{
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #434455;
-}
-.title_1{
-    font-size: 56px;
-    line-height: 1.07;
+.title {
+    stilul font-size: 36px;
+    gn stilul line-height: 1.11;
     text-align: center;
     letter-spacing: 0.02em;
-    color: #ffffff;
+    text-transform: capitalize;
+    color: #2e2f42;
 }
-.title_2{
+.title_2 {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
@@ -108,33 +98,14 @@ span{
     color: #2e2f42;
 
 }
-.our_team{
+
+.our_team {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
 }
-.titlu3{
-    font-size: 36px;
-    stilul line-height: 1.11;
-    text-align: center;
-    letter-spacing: 0.02em;
-    text-transform: capitalize;
-    color: #2e2f42;
-}
-.our_portofolio{
-    background-color: #FFFFFF;
-
-}
-.subtitle3{
-    font-weight: 500;
-    stilul font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-}
-
-.title_4{
+.title_4 {
     stilul font-size: 36px;
     stilul line-height: 1.11;
     stilul text-align: center;
@@ -142,48 +113,36 @@ span{
     text-transform: capitalize;
     color: #2e2f42;
 }
-.subtitle_4{
+.our_portofolio {
+    background-color: #FFFFFF;
+
+}
+.subtitle_4 {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
 }
+
 .portofolio_paragraph {
     stilul font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
 }
-.footer_paragraph{
+.footer {
+    background-color: #2E2F42;
+    color: #F4F4FD;
+}
+span {
+    color: #2E2F42;
+}
+.studio_footer {
+    color: #F4F4FD
+}
+.footer_paragraph {
     line-height: 1.5;
     color: #F4F4FD;
     letter-spacing: 0.02em;
-}
-.menu{
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-}
-.menu:hover{
-    color: #404bbf;
-}
-.menu:focus{
-    color: #404bbf;
-}
-.section2_paragraph{
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #434455;
-}
-.title{
-    stilul font-size: 36px;
-    stilul line-height: 1.11;
-    text-align: center;
-    letter-spacing: 0.02em;
-    text-transform: capitalize;
-    color: #2e2f42;
 }
