--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,6 @@ span {
 .menu:hover {
     color: #404bbf;
 }
-
 .menu:focus {
     color: #404bbf;
 }
@@ -47,15 +46,22 @@ span {
     letter-spacing: 0.02em;
     color: #434455;
 }
+.contacts:hover {
+    color: #404BBF;
+}
+
+.contacts:focus {
+    color: #404BBF;
+}
 .link {
     font-weight: 500;
     font-size: 12px;
     line-height: 16px;
 }
-.section_1 {
+.section_one {
     background-color: #2E2F42;
 }
-.title_1 {
+.title_one {
     font-size: 56px;
     line-height: 1.07;
     text-align: center;
@@ -90,13 +96,30 @@ span {
     text-transform: capitalize;
     color: #2e2f42;
 }
-.title_2 {
+.title_two {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
 
+}
+.sectiontwo_paragraph {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+.team {
+    background-color: #F4F4FD;;
+}
+.title {
+    stilul font-size: 36px;
+    gn stilul line-height: 1.11;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: #2e2f42;
 }
 
 .our_team {
@@ -105,7 +128,7 @@ span {
     letter-spacing: 0.02em;
     color: #434455;
 }
-.title_4 {
+.title_four {
     stilul font-size: 36px;
     stilul line-height: 1.11;
     stilul text-align: center;
@@ -117,7 +140,7 @@ span {
     background-color: #FFFFFF;
 
 }
-.subtitle_4 {
+.subtitle_four {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
