--- a/css/styles.css
+++ b/css/styles.css
@@ -114,7 +114,7 @@ span {
     background-color: #F4F4FD;
 }
 .team {
-    background-color: #F4F4FD;;
+    background-color:  #FFFFFF;
 }
 .title {
     font-size: 36px;
