--- a/css/styles.css
+++ b/css/styles.css
@@ -111,7 +111,7 @@ span {
     color: #434455;
 }
 .section_three{
-    background-color: #F4F4FD;
+    background-color: #FFFFFF;
 }
 .team {
     background-color:  #FFFFFF;
